[gd_scene load_steps=3 format=3 uid="uid://pause_menu"]

[ext_resource type="Script" path="res://scenes/ui/menus/pause_menu.gd" id="1_pause"]

[sub_resource type="StyleBoxFlat" id="PanelStyle"]
bg_color = Color(0, 0, 0, 0.85)
border_color = Color(0.5, 0.5, 0.5, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 1
script = ExtResource("1_pause")

[node name="PausePanel" type="PanelContainer" parent="."]
process_mode = 1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
custom_minimum_size = Vector2(400, 400)
panel_stylebox = SubResource("PanelStyle")

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 2
process_mode = 1
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
custom_minimum_size = Vector2(0, 40)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="PausePanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="ResumeButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
process_mode = 1
custom_minimum_size = Vector2(0, 50)
text = "Resume"
theme_override_font_sizes/font_size = 20

[node name="JoinButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
process_mode = 1
custom_minimum_size = Vector2(0, 50)
text = "Join"
theme_override_font_sizes/font_size = 20

[node name="SettingsButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
process_mode = 1
custom_minimum_size = Vector2(0, 50)
text = "Settings"
theme_override_font_sizes/font_size = 20

[node name="QuitButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
process_mode = 1
custom_minimum_size = Vector2(0, 50)
text = "Quit to Menu"
theme_override_font_sizes/font_size = 20
